--- a/templates/discount/index.html.twig
+++ b/templates/discount/index.html.twig
@@ -1,20 +1,17 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello DiscountController!{% endblock %}
+{% block title %}Nos réduction{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+<h2 class="text-center">Nos régles de réduction</h2>
+    <br>
+    <div class="container">
+        <ul>
+            <li>Pour tout produits Hifi à plus de 100 euro vous avez 10% de réduction</li>
+            <li>Pour tout produits Electro à plus de 100 euro vous avez 25% de réduction</li>
+            <li>Pour tout produits Jeux vidéos à plus de 100 euro vous avez 20% de réduction</li>
+            <li>Pour tout produits SmartPhone à plus de 100 euro vous avez 5% de réduction</li>
+        </ul>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/Library/WebServer/Documents/ChallengeProduct/src/Controller/DiscountController.php'|file_link(0) }}">src/Controller/DiscountController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/Library/WebServer/Documents/ChallengeProduct/templates/discount/index.html.twig'|file_link(0) }}">templates/discount/index.html.twig</a></code></li>
-    </ul>
 </div>
 {% endblock %}
