--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -1,4 +1,5 @@
 <footer class="mt-5 bg-light py-5 text-center">
     <p>®Copyright SoldProduct ! </p>
+    <a class="nav-link" href="{{ path('discount_index') }}">Régles de nos soldes</a>
 </footer>
 
