--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -10,7 +10,10 @@
                 <a class="nav-link" href="{{ path('homepage') }}">Accueil</a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link" href="">Produits</a>
+                <a class="nav-link" href="{{ path('product_index') }}">Produits</a>
+            </li>
+            <li class="nav-item ">
+                <a class="nav-link" href="{{ path('type_index') }}">Catégories de Produits</a>
             </li>
         </ul>
     </div>
