--- a/templates/product/view.html.twig
+++ b/templates/product/view.html.twig
@@ -1,9 +1,14 @@
+{% extends 'base.html.twig' %}
+
+{% block title %}Nos Produits{% endblock %}
+
+{% block body %}
 <div class="col-md-4">
     <div class="card bg-light mb-3">
         <div class="card-header text-center">
             <div class="card-title">
                 <div class="container">
-                    <a href="{{ path('product_view', {'id': product.id}) }}" >
+                    <a href="" >
                         <img src="{{ product.image }}" alt="Photo du produit"
                              style="height: 200px; width: 100%; display: block">
                     </a>
@@ -11,8 +16,10 @@
                         <dd class="col-md-8"><strong>{{ product.name }}</strong></dd>
                         <dd class="col-md-8">{{ product.price }}€</dd>
                     </dl>
+                    <p>{{ product.detail }}</p>
                 </div>
             </div>
         </div>
     </div>
 </div>
+{% endblock %}
