--- a/templates/product/_product.html.twig
+++ b/templates/product/_product.html.twig
@@ -10,6 +10,7 @@
                     <dl>
                         <dd class="col-md-8"><strong>{{ product.name }}</strong></dd>
                         <dd class="col-md-8">{{ product.price }}€</dd>
+                        <dd class="col-md-8">Prix Soldé : {{ product.DiscountPrice }}€</dd>
                     </dl>
                 </div>
             </div>
