--- a/templates/mail/discount.html.twig
+++ b/templates/mail/discount.html.twig
@@ -1,15 +1,13 @@
-{# templates/emails/registration.html.twig #}
 <div class="example-wrapper">
-    <h1>Resume task</h1>
+    <h1>Solde</h1>
     {% if products %}
-        <p>Hello, the following products have been updated</p>
+        <p>Hello, notre liste de solde a évolué </p>
         <table class="table table-hover">
             <thead>
             <tr>
-                <th scope="col">ID</th>
-                <th scope="col">Name</th>
-                <th scope="col">Base Price</th>
-                <th scope="col">Discounted Price</th>
+                <th scope="col">Produit</th>
+                <th scope="col">Prix de base</th>
+                <th scope="col">Prix soldé</th>
                 <th scope="col">Type</th>
             </tr>
             </thead>
