--- a/templates/mail/discount.html.twig
+++ b/templates/mail/discount.html.twig
@@ -24,6 +24,6 @@
             </tbody>
         </table>
     {% else %}
-        <p>Hello, no products have been updated.</p>
+        <p>Les produit n'ont pas été mise a jour.</p>
     {% endif %}
 </div>
