--- a/templates/mail/discount.html.twig
+++ b/templates/mail/discount.html.twig
@@ -24,6 +24,6 @@
             </tbody>
         </table>
     {% else %}
-        <p>Les produit n'ont pas été mise a jour.</p>
+        <p>Les produits n'ont pas été mise à jour.</p>
     {% endif %}
 </div>
